--- a/user/css/common.css
+++ b/user/css/common.css
@@ -168,13 +168,13 @@ body {
 }
 
 /* header */
-header{
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  background: #fff;
+header {
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    background: #fff;
 }
-header > div{
+header > div {
     height: 90px;
     border-bottom: 1px solid var(--highlight-s);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
@@ -191,13 +191,12 @@ header nav ul li a {
 header nav ul li:hover > a {
     color: var(--primary-r);
 }
-header nav ul li {
+header nav > ul li {
     position: relative;
 }
 header nav ul li > ul {
     position: absolute;
-    display: inline-block;
-    width: 200%;
+    width: 115px;
     text-align: center;
     top: 80%;
     left: 50%;
@@ -267,14 +266,13 @@ header .search i {
 .member-info li i:hover {
     color: var(--primary-r);
 }
-.member-info li {
+.member-info > li {
     position: relative;
 }
 .member-info li span,
 .member-info li .my_info {
     position: absolute;
-    display: inline-block;
-    width: 300%;
+    width: 85px;
     text-align: center;
     padding: 5px 10px;
     top: 80%;
@@ -287,8 +285,9 @@ header .search i {
     opacity: 0;
     transition: 0.3s;
 }
-.member-info li .my_info{
-  width: 500%;
+.member-info li .my_info {
+    width: 180px;
+    padding: 0 15px;
 }
 .member-info li:hover span,
 .member-info li:hover .my_info {
@@ -310,6 +309,15 @@ header .search i {
     border: 0;
     background: transparent;
     padding: 0;
+}
+.member-info .my_info li {
+    height: 18px;
+    margin-bottom: 18px;
+}
+.member-info .my_info .profile_img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 /* Footer */
