--- a/user/css/cart.css
+++ b/user/css/cart.css
@@ -10,14 +10,23 @@ h2 {
   gap: 88px;
   margin-bottom: 90px;
 }
-.cart_list li {
+.cart_list ul {
   width: 784px;
+}
+.cart_list li {
+  width: 100%;
   padding: 23px 30px;
   background: var(--background-g);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   margin-bottom: 18px;
   position: relative;
+}
+.cart_list .cart_empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
 }
 
 .cart_item_del {
