--- a/user/css/class_view.css
+++ b/user/css/class_view.css
@@ -5,8 +5,12 @@ body {
   background: #0E1A2B;
   height: 100%;
 }
+.class_view {
+  padding-top: 90px;
+}
 .container > iframe {
   padding: 54px 0;
+  box-sizing: border-box;
 }
 .lec_desc h2 {
   color: #fff;
@@ -21,14 +25,32 @@ body {
 }
 #lec_container {
   position: relative;
-  height: 1489px;
   transition: 0.5s;
+  margin-bottom: 180px;
 }
-#lec_container.slide {
-  height: 1987px;
-}
+
 #lec_container.slide #lec_list {
   top: 500px;
+}
+
+.lec_btn a:first-of-type {
+  background: var(--highlight-m);
+  color: var(--highlight-s);
+  border: 3px solid var(--highlight-m);
+  transition: 0.2s;
+}
+.lec_btn a:first-of-type:hover {
+  background: #fff;
+}
+.lec_btn a:last-of-type {
+  color: #fff;
+  background: var(--highlight-s);
+  border: 3px solid var(--highlight-s);
+  transition: 0.2s;
+}
+.lec_btn a:last-of-type:hover {
+  background: #fff;
+  color: var(--highlight-s);
 }
 #lec_review {
   background: var(--background-g);
@@ -36,9 +58,15 @@ body {
   border-top-left-radius: 50px;
   padding: 60px 195px 120px;
   position: absolute;
+  height: 550px;
 }
 #lec_review .review_title {
   position: relative;
+}
+#lec_review .rv_empty p {
+  text-align: center;
+  line-height: 205px;
+  width: 100%;
 }
 #lec_review .review_title a {
   display: inline-block;
@@ -151,8 +179,7 @@ body {
 #lec_list {
   border: 2px solid var(--background-g);
   background: #fff;
-  border-top-right-radius: 50px;
-  border-top-left-radius: 50px;
+  border-radius: 50px;
   padding: 60px 112px;
   transition: 0.5s;
   width: 1320px;
@@ -169,6 +196,11 @@ body {
   border-radius: 15px;
   overflow: hidden;
 }
+#lec_list ul li figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 #lec_list ul li {
   gap: 62px;
   padding: 40px 0;
@@ -177,26 +209,35 @@ body {
 #lec_list ul li:last-of-type {
   border-bottom: none;
 }
-#lec_list ul li .lec_info_box h3 {
+#lec_list ul li .lec_info_box a {
   color: var(--highlight-s);
   font-weight: 600;
   padding: 5px 15px;
   border-radius: 15px;
+  transition: 0.2s;
 }
 #lec_list ul li .lec_info_box {
   width: 100%;
 }
-#lec_list ul li .lec_info_box h3.playing {
-  /* color: var(--primary-r); */
-  background: rgba(224,233,239.55);
-  /* background: rgba(168,218,219,.6); */
+#lec_list ul li.playing .lec_info_box a,
+#lec_list ul li .lec_info_box a:hover {
+  background: rgba(168,218,219.3);
   color: var(--primary-n);
   font-weight: 700;
+  transition: 0.2s;
 }
 #lec_list ul li .lec_info_box span {
   display: inline-block;
-  background: rgba(168,218,219,.6);
+  background: rgba(168,218,219,.5);
   color: var(--primary-n);
   border-radius: 15px;
   padding: 3px 15px;
+}
+#lec_list .lec_info_box .c_title {
+  flex-direction: column;
+}
+#lec_list .lec_info_box .c_title p {
+  margin-top: 27px;
+  margin-left: 40px;
+  color: #98A4AC;
 }
