--- a/user/css/index.css
+++ b/user/css/index.css
@@ -10,6 +10,8 @@
     line-height: 18px;
     text-transform: uppercase;
     color: #fff;
+    margin-top: 5px;
+    margin-right: 5px;
 }
 .new-tag {
     background: var(--highlight-m);
@@ -22,11 +24,6 @@
 }
 .difficult-tag {
     background: var(--primary-n);
-}
-
-.member-info li .hidden,
-.hidden {
-    display: none;
 }
 
 section.banner {
@@ -248,6 +245,10 @@ section.banner .swiper-pagination .swiper-pagination-bullet-active {
 .class:last-child {
     margin-bottom: 0;
 }
+.class li.no_class{
+    text-align: center;
+    margin: auto;
+}
 
 .class h3,
 .class img {
@@ -255,6 +256,8 @@ section.banner .swiper-pagination .swiper-pagination-bullet-active {
 }
 .class img {
     width: 100%;
+    height: 180px;
+    object-fit: cover;
 }
 .class h3 em {
     color: var(--primary-r);
